* Docu/ToDo.txt

--- a/Docu/ToDo.txt
+++ b/Docu/ToDo.txt
@@ -12,3 +12,5 @@
     * Mod/OfrontOPM.cmdln.Mod: * made compilable, #2
   типы менялись для того, чтобы Ofront+ собрал самого себя со старыми типами в OfrontOP*
   После перевода на новые типы OfrontOP* исправить эти типы в OfrontOPM.cmdln.Mod назад.
+
+- Поубирать лишние пробелы и табуляции в конце строк исходников.
